"feat(ms-sucursales): implementar entidades, servicios y controller y levantar servicio sin errores"
 - Implementa lógica de negocio para sedes
 - Agrega cambio de estado operativo
 - Servicio levanta sin errores"